// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles unknown languages 1`] = `
<div>
  <Tooltip>
    <span>
      cpp, Java
    </span>
  </Tooltip>
</div>
`;

exports[`handles unknown languages 2`] = `
<div>
  <Tooltip>
    <span>
      unknown, Java
    </span>
  </Tooltip>
</div>
`;

exports[`renders 1`] = `
<div>
  <Tooltip>
    <span>
      Java, JavaScript
    </span>
  </Tooltip>
</div>
`;

exports[`sorts languages 1`] = `
<div>
  <Tooltip>
    <span>
      JavaScript, Java
    </span>
  </Tooltip>
</div>
`;
